--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 *.sln
+/.vs/ConcreteDecorator/v15/Server/sqlite3/db.lock
+/.vs/ConcreteDecorator/v15/Server/sqlite3/storage.ide
+/.vs/ConcreteDecorator/v15/Server/sqlite3/storage.ide-shm
+*.ide-wal
